Some fixes for BE themes
Missing lines in pages list in AR, missing message in AR login page, fix
for too small input field for intro page in both themes

--- a/wbce/templates/argos_theme_reloaded/css/module-fixes.css
+++ b/wbce/templates/argos_theme_reloaded/css/module-fixes.css
@@ -44,6 +44,10 @@ input#admin_tools {
 	margin-bottom: 10px;
 }
 
+.form_submit {
+	width:99%;
+}
+
 /* textarea width for code2 module */
 .CodeMirror { width: 100% !important; margin-top: 12px; margin-bottom: 6px;}
 
