--- a/wbce/templates/wbce_flat_theme/css/themeextended.css
+++ b/wbce/templates/wbce_flat_theme/css/themeextended.css
@@ -779,3 +779,7 @@ div.pages_list table tr:hover {
     width: 200px;
     padding-left: 160px;
 }
+
+.form_submit {
+	width:99%;
+}
